# hordle

./: .gitignore  CHANGELOG.md  README.md  hordle.cabal
app/: Hordle.hs  Main.hs  Stats.hs  UI.hs
app/Hordle/: Dict.hs  Game.hs  Hordle.hs  Types.hs  UI.hs
app/Hordle/Solver/: Internal.hs  LookAhead.hs  Solve.hs
app/Hordle/UI/: LookAhead.hs  Solver.hs  UI.hs
etc/: dict.txt  optimaltree-normalmode.txt  starting.txt
test/: Main.hs
