cabal-version:      2.4
name:               hordle
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             James Burton
maintainer:         j.burton@brighton.ac.uk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hordle
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0
                    , text
                    , random
    hs-source-dirs:   app
    ghc-options: -Wall 
    default-language: Haskell2010
