cabal-version:      2.4
name:               hordle
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             James Burton
maintainer:         j.burton@brighton.ac.uk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hordle
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:  Hordle.UI.Solver
                  , Hordle.UI.LookAhead

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0
                    , text ^>=1.2.5.0
                    , random
                    , time
                    , containers
                    , microlens
                    , microlens-th
                    , brick
                    , vty
                    , haskeline
                    , vector
    hs-source-dirs:   app
    ghc-options: -Wall 
    default-language: Haskell2010

executable stats
    main-is:          Stats.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0
                    , text ^>=1.2.5.0
                    , time
                    , vector
    hs-source-dirs:   app
    ghc-options: -Wall 
    default-language: Haskell2010

test-suite test-hordle
    type:       exitcode-stdio-1.0
    main-is:    Main.hs
    other-modules: Hordle.UI.Solver
                 , Hordle.UI.LookAhead
    hs-source-dirs: test, app
    build-depends: base ^>=4.15.0.0
                 , text ^>=1.2.5.0
                 , time
                 , random
                 , containers
                 , microlens
                 , microlens-th
                 , haskeline
                 , vector
                 , QuickCheck
                 , test-framework
                 , test-framework-quickcheck2
    default-language:    Haskell2010
